# TomDan.ToolKit

./: .gitignore  CMakeLists.txt  README.md  ROUTEMAP.md  TomDan.ToolKit.sln  xmake.lua
Core/: CMakeLists.txt  xmake.lua
Core/include/: LocalMessageBus.hpp  PluginManager.hpp
Core/include/Network/: NetworkCore.hpp
Core/src/: LocalMessageBus.cpp  PluginManager.cpp  main.cpp
ExamplePlugin/: xmake.lua
ExamplePlugin/src/: ExamplePlugin.cpp
Interface/: CMakeLists.txt  xmake.lua
Interface/include/: MessageBus.h  MessageBus.hpp  Plugin.h  Plugin.hpp
Plugin.Example/: CMakeLists.txt  xmake.lua
Plugin.Example/src/: ExamplePlugin.cpp
TestPluginA/: PluginA.cs  TestPluginA.csproj
TomDan.ToolKit/: Program.cs  TomDan.ToolKit.Core.csproj  nlog.config
TomDan.ToolKit.Core/: xmake.lua
TomDan.ToolKit.Core/include/: MessageBus.h  PluginManager.h
TomDan.ToolKit.Core/src/: MessageBus.cpp  PluginManager.cpp  main.cpp
TomDan.ToolKit.HttpServer/: README.md  xmake.lua
TomDan.ToolKit.HttpServer/include/: ControllerManager.h  ExampleController.h  HttpMethod.h  HttpServer.h  IController.h  RouteRegistry.h
TomDan.ToolKit.HttpServer/src/: ExampleController.cpp  HttpServer.cpp  HttpServerPlugin.cpp
TomDan.ToolKit.Interface/: .gitignore  xmake.lua
TomDan.ToolKit.Interface/include/: IMessageBus.h  IPlugin.h
TomDan.ToolKit.Interface/src/: IPlugin.cpp
TomDan.ToolKit.Model/: Class1.cs
TomDan.ToolKit.Plugin.DDNS/: Class1.cs  DDNS.cs  DDNSEntity.cs  DDNSPlugin.cs  IpMonitor.cs  Plugin.cs  RequestClient.cs  TomDan.ToolKit.Plugin.DDNS.csproj
TomDan.ToolKit.Plugin.MQTTBroker/: MqttBroker.cs  MqttBrokerPlugin.cs  TomDan.ToolKit.Plugin.MQTTBroker.csproj
TomDan.ToolKit.PluginManagement/: EventAggregator.cs  PluginLoadContext.cs  PluginManager.cs  PluginService.cs  TomDan.ToolKit.PluginManagement.csproj
TomDan.ToolKit/Core/: Service.cs
Tomdan.ToolKit.Plugin.Base/: IEventAggregator.cs  ILogic.cs  IPlugin.cs  PluginConfig.cs  PluginContext.cs  PluginException.cs  Tomdan.ToolKit.Plugin.Base.csproj
